cmake_minimum_required(VERSION 3.21)
project(SRQCCXSJJS_Base_Luogu)

set(CMAKE_CXX_STANDARD 17)

# Chapter2
add_executable(P5708 Part1/Chapter2/P5708.cpp)
add_executable(P1421 Part1/Chapter2/P1421.cpp)
add_executable(P5709 Part1/Chapter2/P5709.cpp)
add_executable(P2181 Part1/Chapter2/P2181.cpp)

# Chapter3
add_executable(P1422 Part1/Chapter3/P1422.cpp)
add_executable(P1424 Part1/Chapter3/P1424.cpp)
add_executable(P1888 Part1/Chapter3/P1888.cpp)
add_executable(P1046 Part1/Chapter3/P1046.cpp)
