cmake_minimum_required(VERSION 3.21)
project(SRQCCXSJJS_Base_Luogu)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)

# Chapter1
add_executable(L1-1 Part1/Chapter1/L1-1.cpp)
add_executable(L1-2 Part1/Chapter1/L1-2.cpp)
add_executable(L1-3 Part1/Chapter1/L1-3.cpp)
add_executable(L1-4 Part1/Chapter1/L1-4.cpp)
add_executable(L1-5 Part1/Chapter1/L1-5.cpp)
add_executable(L1-6 Part1/Chapter1/L1-6.cpp)
add_executable(L1-7 Part1/Chapter1/L1-7.cpp)
add_executable(L1-8 Part1/Chapter1/L1-8.cpp)
add_executable(L1-9 Part1/Chapter1/L1-9.cpp)
add_executable(L1-10 Part1/Chapter1/L1-10.cpp)
add_executable(L1-11 Part1/Chapter1/L1-11.cpp)
