cmake_minimum_required(VERSION 3.21)
project(SRQCCXSJJS_Base_Luogu)

set(CMAKE_CXX_STANDARD 17)

# Chapter1
add_executable(L1-1 Part1/Chapter1/L1-1.cpp)
add_executable(L1-2 Part1/Chapter1/L1-2.cpp)
add_executable(L1-3 Part1/Chapter1/L1-3.cpp)
add_executable(L1-4 Part1/Chapter1/L1-4.cpp)
add_executable(L1-5 Part1/Chapter1/L1-5.cpp)
add_executable(L1-6 Part1/Chapter1/L1-6.cpp)
add_executable(L1-7 Part1/Chapter1/L1-7.cpp)
add_executable(L1-8 Part1/Chapter1/L1-8.cpp)
add_executable(L1-9 Part1/Chapter1/L1-9.cpp)
add_executable(L1-10 Part1/Chapter1/L1-10.cpp)
add_executable(L1-11 Part1/Chapter1/L1-11.cpp)

# Chapter2
# Example
add_executable(L2-1 Part1/Chapter2/L2-1.cpp)
add_executable(L2-2 Part1/Chapter2/L2-2.cpp)
add_executable(L2-3 Part1/Chapter2/L2-3.cpp)
add_executable(L2-4 Part1/Chapter2/L2-4.cpp)
add_executable(L2-5 Part1/Chapter2/L2-5.cpp)
add_executable(L2-6 Part1/Chapter2/L2-6.cpp)
add_executable(L2-7 Part1/Chapter2/L2-7.cpp)
add_executable(L2-8 Part1/Chapter2/L2-8.cpp)
add_executable(L2-9 Part1/Chapter2/L2-9.cpp)
add_executable(L2-10 Part1/Chapter2/L2-10.cpp)
add_executable(L2-11 Part1/Chapter2/L2-11.cpp)
add_executable(L2-12 Part1/Chapter2/L2-12.cpp)

# Exercise
add_executable(P1421 Part1/Chapter2/P1421.cpp)
add_executable(P2181 Part1/Chapter2/P2181.cpp)
add_executable(P5708 Part1/Chapter2/P5708.cpp)
add_executable(P5709 Part1/Chapter2/P5709.cpp)

# Chapter3
# Example
add_executable(L3-1 Part1/Chapter3/L3-1.cpp)
add_executable(L3-2 Part1/Chapter3/L3-2.cpp)
add_executable(L3-3 Part1/Chapter3/L3-3.cpp)
add_executable(L3-4 Part1/Chapter3/L3-4.cpp)
add_executable(L3-5 Part1/Chapter3/L3-5.cpp)
add_executable(L3-6 Part1/Chapter3/L3-6.cpp)
add_executable(L3-7 Part1/Chapter3/L3-7.cpp)
add_executable(L3-8 Part1/Chapter3/L3-8.cpp)
add_executable(L3-9 Part1/Chapter3/L3-9.cpp)
add_executable(L3-10 Part1/Chapter3/L3-10.cpp)
add_executable(L3-11 Part1/Chapter3/L3-11.cpp)
add_executable(L3-12 Part1/Chapter3/L3-12.cpp)

# Exercise
add_executable(P1046 Part1/Chapter3/P1046.cpp)
add_executable(P1422 Part1/Chapter3/P1422.cpp)
add_executable(P1424 Part1/Chapter3/P1424.cpp)
add_executable(P1888 Part1/Chapter3/P1888.cpp)
add_executable(P4414 Part1/Chapter3/P4414.cpp)
add_executable(P5717 Part1/Chapter3/P5717.cpp)

# Chapter4
# Example
add_executable(L4-1 Part1/Chapter4/L4-1.cpp)
add_executable(L4-2 Part1/Chapter4/L4-2.cpp)
add_executable(L4-3 Part1/Chapter4/L4-3.cpp)
add_executable(L4-4 Part1/Chapter4/L4-4.cpp)
add_executable(L4-5 Part1/Chapter4/L4-5.cpp)
add_executable(L4-6 Part1/Chapter4/L4-6.cpp)
add_executable(L4-7 Part1/Chapter4/L4-7.cpp)
add_executable(L4-8 Part1/Chapter4/L4-8.cpp)
add_executable(L4-9 Part1/Chapter4/L4-9.cpp)
add_executable(L4-9-0 Part1/Chapter4/L4-9-0.cpp)
add_executable(L4-10 Part1/Chapter4/L4-10.cpp)
add_executable(L4-11A Part1/Chapter4/L4-11A.cpp)
add_executable(L4-11B Part1/Chapter4/L4-11B.cpp)
add_executable(L4-12 Part1/Chapter4/L4-12.cpp)
add_executable(L4-13 Part1/Chapter4/L4-13.cpp)
add_executable(L4-14 Part1/Chapter4/L4-14.cpp)

# Practice
add_executable(P1423 Part1/Chapter4/P1423.cpp)
add_executable(P1307 Part1/Chapter4/P1307.cpp)
add_executable(P1720 Part1/Chapter4/P1720.cpp)
add_executable(P5724 Part1/Chapter4/P5724.cpp)
add_executable(P1420 Part1/Chapter4/P1420.cpp)
add_executable(P1075 Part1/Chapter4/P1075.cpp)
add_executable(P5725 Part1/Chapter4/P5725.cpp)
